--- a/index.html
+++ b/index.html
@@ -6,10 +6,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Vinciguerra Davide">
     <meta name="description" content="The Booleaner">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.css" style="style/css">
     <title>The Booleaner</title>
 </head>
 <body>
-    
+    <!-- Header -->
+    <header>
+        <div id="background">
+            <img src="img/logo.svg" alt="logo-The Booleaner">
+        </div>
+    </header>
+
+    <!-- Corpo -->
+    <main>
+        
+    </main>
+
+    <!-- Footer -->
+    <footer>
+
+    </footer>
 </body>
 </html>
