adds h1 + article section

--- a/index.html
+++ b/index.html
@@ -19,7 +19,13 @@
 
     <!-- Corpo -->
     <main>
-        
+        <article>
+            <h1>Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners-Lee</h1>
+            <section class="written-by">
+                <div>Scritto da <span id="booleaner-sign">The Booleaner</span></div>
+                <span id="data">il 10/10/2020</span>
+            </section>
+        </article>
     </main>
 
     <!-- Footer -->
