adds figure section

--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@
                 <span id="data">il 10/10/2020</span>
             </section>
         </article>
+        <figure id="tim">
+            <img src="img/tim-1.jpg" alt="Tim Berners-Lee">
+            <img src="img/tim-2.jpg" alt="Tim Berners-Lee">
+            <figcaption>1st Photo: John S. and James L. Knight Foundation, by Scott Henrichsen<br>2nd Photo: Wikimedia, by Paul Clarke</figcaption>
+        </figure>
     </main>
 
     <!-- Footer -->
