--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
             <img src="img/tim-2.jpg" alt="Tim Berners-Lee">
             <figcaption>1st Photo: John S. and James L. Knight Foundation, by Scott Henrichsen<br>2nd Photo: Wikimedia, by Paul Clarke</figcaption>
         </figure>
+        <section id="paragraph">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci vero debitis optio cum. Iure veniam necessitatibus, optio labore provident maiores earum iste eum harum id!Dicta rem animi quos amet! <span class="highlighted-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</span> In distinctio quam illum eveniet sit nesciunt rerum repellat ratione corrupti perferendis corporis amet ut tempore, explicabo beatae labore, totam eaque nostrum.</p>
+        </section>
     </main>
 
     <!-- Footer -->
