adds unordered list

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 
     <!-- Corpo -->
     <main>
+        <!-- Article - Titolo + written-by -->
         <article>
             <h1>Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners-Lee</h1>
             <section class="written-by">
@@ -26,13 +27,26 @@
                 <span id="data">il 10/10/2020</span>
             </section>
         </article>
+
+        <!-- Tim Berners-Lee0's Images -->
         <figure id="tim">
             <img src="img/tim-1.jpg" alt="Tim Berners-Lee">
             <img src="img/tim-2.jpg" alt="Tim Berners-Lee">
             <figcaption>1st Photo: John S. and James L. Knight Foundation, by Scott Henrichsen<br>2nd Photo: Wikimedia, by Paul Clarke</figcaption>
         </figure>
+
+        <!-- Paragrafo -->
         <section id="paragraph">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci vero debitis optio cum. Iure veniam necessitatibus, optio labore provident maiores earum iste eum harum id!Dicta rem animi quos amet! <span class="highlighted-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</span> In distinctio quam illum eveniet sit nesciunt rerum repellat ratione corrupti perferendis corporis amet ut tempore, explicabo beatae labore, totam eaque nostrum.</p>
+        </section>
+
+        <!-- Lista non ordinata -->
+        <section id="unordered-list">
+            <ul>
+                <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe quas error adipisci amet molestiae, dicta voluptatem, repellendus ducimus similique atque, consectetur in voluptat.</li>
+                <li>Saepe quas error adipisci amet molestiae, dicta voluptatem, repellendus ducimus similique atque, consectetur in voluptat.</li>
+                <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe quas error adipisci amet molestiae, dicta voluptatem, repellendus ducimus similique atque, consectetur in voluptat.</li>
+            </ul>
         </section>
     </main>
 
