--- a/index.html
+++ b/index.html
@@ -48,6 +48,20 @@
                 <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe quas error adipisci amet molestiae, dicta voluptatem, repellendus ducimus similique atque, consectetur in voluptat.</li>
             </ul>
         </section>
+
+        <!-- table -->
+        <section>
+            <div class="thead">
+                <span class="thead-text">Lorem ipsum dolor</span>
+                <span class="thead-text">Lorem ipsum dolor</span>
+                <span class="thead-text">Lorem ipsum dolor</span>
+            </div>
+            <div class="tbody">
+                <span class="tbody-text">Lorem ipsum dolor</span>
+                <span class="tbody-text">Lorem ipsum dolor</span>
+                <span class="tbody-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit in praesentium totam, temporibus facilis deserunt sint assumenda unde? Nesciunt eligendi totam sequi et enim unde vero repellendus mollitia! Officia, facilis?</span>
+            </div>
+        </section>
     </main>
 
     <!-- Footer -->
