--- a/index.html
+++ b/index.html
@@ -50,18 +50,30 @@
         </section>
 
         <!-- table -->
-        <section>
-            <div class="thead">
-                <span class="thead-text">Lorem ipsum dolor</span>
-                <span class="thead-text">Lorem ipsum dolor</span>
-                <span class="thead-text">Lorem ipsum dolor</span>
-            </div>
-            <div class="tbody">
-                <span class="tbody-text">Lorem ipsum dolor</span>
-                <span class="tbody-text">Lorem ipsum dolor</span>
-                <span class="tbody-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit in praesentium totam, temporibus facilis deserunt sint assumenda unde? Nesciunt eligendi totam sequi et enim unde vero repellendus mollitia! Officia, facilis?</span>
-            </div>
-        </section>
+        <table>
+            <thead>
+                <tr>
+                    <th>Lorem ipsum dolor</th>
+                    <th>Lorem ipsum dolor</th>
+                    <th>Lorem ipsum dolor</th>
+                </tr>
+            </thead>
+            <tr class="blue-cell">
+                <td>Lorem ipsum dolor</td>
+                <td>Lorem ipsum dolor</td>
+                <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt consequatur a, unde sequi numquam inventore quaerat consequuntur, necessitatibus facilis non natus cumque excepturi officiis harum odio est quae tempore autem.</td>
+            </tr>
+            <tr class="white-cell">
+                <td>Lorem ipsum dolor</td>
+                <td>Lorem ipsum dolor</td>
+                <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt consequatur a, unde sequi numquam inventore quaerat consequuntur, necessitatibus facilis non natus cumque excepturi officiis harum odio est quae tempore autem.</td>
+            </tr>
+            <tr class="blue-cell">
+                <td>Lorem ipsum dolor</td>
+                <td>Lorem ipsum dolor</td>
+                <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt consequatur a, unde sequi numquam inventore quaerat consequuntur, necessitatibus facilis non natus cumque excepturi officiis harum odio est quae tempore autem.</td>
+            </tr>
+        </table>
     </main>
 
     <!-- Footer -->
