adds Second Paragraph

--- a/index.html
+++ b/index.html
@@ -58,22 +58,38 @@
                     <th>Lorem ipsum dolor</th>
                 </tr>
             </thead>
-            <tr class="blue-cell">
-                <td>Lorem ipsum dolor</td>
-                <td>Lorem ipsum dolor</td>
-                <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt consequatur a, unde sequi numquam inventore quaerat consequuntur, necessitatibus facilis non natus cumque excepturi officiis harum odio est quae tempore autem.</td>
-            </tr>
-            <tr class="white-cell">
-                <td>Lorem ipsum dolor</td>
-                <td>Lorem ipsum dolor</td>
-                <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt consequatur a, unde sequi numquam inventore quaerat consequuntur, necessitatibus facilis non natus cumque excepturi officiis harum odio est quae tempore autem.</td>
-            </tr>
-            <tr class="blue-cell">
-                <td>Lorem ipsum dolor</td>
-                <td>Lorem ipsum dolor</td>
-                <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt consequatur a, unde sequi numquam inventore quaerat consequuntur, necessitatibus facilis non natus cumque excepturi officiis harum odio est quae tempore autem.</td>
-            </tr>
+            <tbody>
+                <tr class="blue-cell">
+                    <td>Lorem ipsum dolor</td>
+                    <td>Lorem ipsum dolor</td>
+                    <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt consequatur a, unde sequi numquam inventore quaerat consequuntur, necessitatibus facilis non natus cumque excepturi officiis harum odio est quae tempore autem.</td>
+                </tr>
+                <tr class="white-cell">
+                    <td>Lorem ipsum dolor</td>
+                    <td>Lorem ipsum dolor</td>
+                    <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt consequatur a, unde sequi numquam inventore quaerat consequuntur, necessitatibus facilis non natus cumque excepturi officiis harum odio est quae tempore autem.</td>
+                </tr>
+                <tr class="blue-cell">
+                    <td>Lorem ipsum dolor</td>
+                    <td>Lorem ipsum dolor</td>
+                    <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt consequatur a, unde sequi numquam inventore quaerat consequuntur, necessitatibus facilis non natus cumque excepturi officiis harum odio est quae tempore autem.</td>
+                </tr>
+            </tbody>
         </table>
+
+        <!-- Second paragraph -->
+        <section id="paragraph">
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Adipisci vero debitis optio cum. Iure veniam necessitatibus,
+                optio labore provident maiores earum iste eum harum id!Dicta rem animi quos amet! Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                <span class="highlighted-text">
+                    In distinctio quam illum eveniet sit nesciunt rerum repellat
+                </span>
+                ratione corrupti perferendis
+                corporis amet ut tempore, explicabo beatae labore, totam eaque nostrum.
+            </p>
+        </section>
     </main>
 
     <!-- Footer -->
