adds footer section

--- a/index.html
+++ b/index.html
@@ -90,11 +90,21 @@
                 corporis amet ut tempore, explicabo beatae labore, totam eaque nostrum.
             </p>
         </section>
-    </main>
 
+    </main>
+    
     <!-- Footer -->
     <footer>
-
+        <!-- Potrebbero interessarti -->
+        <span id="interessi">Potrebbero interessarti</span>
+        <div class="footer-container">
+            <img class="footer-image" src="img/monitor.jpg" alt="">
+            <div class="footer-text-image">Lorem ipsum dolor</div>
+        </div>
+        <div class="footer-container">
+            <img class="footer-image" src="img/graph.jpg" alt="">
+            <div class="footer-text-image">Lorem ipsum dolor</div>
+        </div>
     </footer>
 </body>
 </html>
